--- a/.github/actions/java-build/action.yml
+++ b/.github/actions/java-build/action.yml
@@ -77,7 +77,7 @@ runs:
 
     - name: "Upload Build Artifacts"
       if: steps.check_pom.outputs.has_pom == 'true'
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
       with:
         name: build-artifacts
         path: |
@@ -87,7 +87,7 @@ runs:
 
     - name: "Upload Coverage Report"
       if: steps.check_pom.outputs.has_pom == 'true' && inputs.generate_coverage == 'true'
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
       with:
         name: coverage-report
         path: '**/target/site/jacoco/'
