--- a/.github/template-workflows/build.yml
+++ b/.github/template-workflows/build.yml
@@ -139,7 +139,7 @@ jobs:
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: "Upload Coverage Report"
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         with:
           name: coverage-report
           path: '**/target/site/jacoco/'
