ci(workflows): improve error handling in copilot setup workflow Add continue-on-error flags to prevent build failures from optional tools Remove dependabot.yml from sync configuration

--- a/.github/fork-resources/copilot-setup-steps.yml
+++ b/.github/fork-resources/copilot-setup-steps.yml
@@ -36,6 +36,7 @@ jobs:
           cache: 'maven'
 
       - name: Install Maven dependencies
+        continue-on-error: true
         env:
           # Fix for Maven 3.9+ network issues with Azure/GitHub Actions
           # Limits connection lifetime to prevent stale connections from being reused
@@ -66,6 +67,7 @@ jobs:
           done
 
       - name: Install Trivy security scanner
+        continue-on-error: true
         run: |
           sudo apt-get update
           sudo apt-get install wget apt-transport-https gnupg lsb-release
@@ -75,7 +77,8 @@ jobs:
           sudo apt-get install trivy
 
       - name: Verify Java installation
+        continue-on-error: true
         run: |
           java -version
           mvn -version
-          trivy version
+          trivy version || echo "⚠️ Trivy not available (installation may have failed)"
