--- a/.github/fork-resources/dependabot.yml
+++ b/.github/fork-resources/dependabot.yml
@@ -1,57 +1,7 @@
 version: 2
 updates:
-  # GitHub Actions - Fork Workflows
-  # Monitor all GitHub Actions for security updates
-  # Aligns with ADR-026: Dependabot Security Update Strategy
-  #
-  # Schedule Strategy:
-  # - Fork repos: Weekly (Monday 08:00 UTC)
-  # - Template repo: Daily (08:00 UTC)
-  # - Template sync: Daily propagation
-  # This design ensures forks receive updates via template sync before
-  # their own dependabot finds them, reducing duplicate PRs
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "08:00"
-    target-branch: "main"
-    labels:
-      - "dependencies"
-    groups:
-      github-actions:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-    open-pull-requests-limit: 5
-
-  # GitHub Actions - Composite Actions
-  # Monitor composite actions synced from template repository
-  #
-  # Note: These actions are synced from the template, but fork monitoring
-  # provides a backup check and independent validation. This redundancy
-  # ensures critical security patches are caught even if sync-template
-  # has delays or issues.
-  - package-ecosystem: "github-actions"
-    directory: "/.github/actions"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "08:00"
-    target-branch: "main"
-    labels:
-      - "dependencies"
-    groups:
-      github-actions:
-        patterns:
-          - "*"
-        update-types:
-          - "minor"
-          - "patch"
-    open-pull-requests-limit: 5
+  # Maven Dependencies - Application Code
+  # Workflow and GitHub Actions updates are managed via template synchronization
 
   # 1) TOP-LEVEL AGGREGATOR
   #    Scans the root POM, but ignores any dependencies physically declared in
