ci(workflows): add dynamic path filtering to CodeQL workflow Replace static paths-ignore with check-paths job for conditional execution Update release-please config to use maven release type

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -2,18 +2,14 @@
   "packages": {
     ".": {
       "changelog-path": "CHANGELOG.md",
-      "release-type": "simple",
+      "release-type": "maven",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
       "draft": false,
       "prerelease": false,
       "include-component-in-tag": false,
       "include-v-in-tag": true,
-      "versioning": "default",
-      "extra-files": [
-        "package.json",
-        "packages/*/package.json"
-      ]
+      "versioning": "default"
     }
   },
   "plugins": ["sentence-case"],
