--- a/.github/template-workflows/release.yml
+++ b/.github/template-workflows/release.yml
@@ -43,13 +43,20 @@ jobs:
       contents: write
       pull-requests: write
       issues: write
-      
+
     steps:
+      - name: "Generate GitHub App Token"
+        id: app-token
+        uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42  # v2.1.4
+        with:
+          app-id: ${{ secrets.RELEASE_APP_ID }}
+          private-key: ${{ secrets.RELEASE_APP_PRIVATE_KEY }}
+
       - name: "Generate Release PR"
         uses: googleapis/release-please-action@v4
         id: release
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
           config-file: .release-please-config.json
           
   tag-with-upstream:
