feat(template-sync): implement duplicate PR prevention for template updates add inline PR detection to reuse existing template-sync branches and update PRs add integration-cleanup workflow to sync fork_integration with main

--- a/.github/sync-config.json
+++ b/.github/sync-config.json
@@ -70,6 +70,10 @@
         {
           "path": ".github/template-workflows/codeql.yml",
           "description": "CodeQL security scanning with language detection"
+        },
+        {
+          "path": ".github/template-workflows/integration-cleanup.yml",
+          "description": "Fork integration branch synchronization after main merges"
         }
       ],
       "template_only": [
