ci(workflows): update template-sync workflows and docs switch template-sync cadence from weekly to daily at 8am UTC update PR-duplication checks with robust jq filter and remove extra outputs

--- a/.github/template-workflows/codeql.yml
+++ b/.github/template-workflows/codeql.yml
@@ -110,6 +110,8 @@ jobs:
                -not -path "*/__pycache__/*" \
                -not -path "*/.venv/*" \
                -not -path "*/venv/*" \
+               -not -path "*/.pytest_cache/*" \
+               -not -path "*/.mypy_cache/*" \
                -not -path "*/node_modules/*" | grep -q .; then
             LANGUAGES=$(echo "$LANGUAGES" | jq -c '. + ["python"]')
           fi
