--- a/.github/template-workflows/sync-template.yml
+++ b/.github/template-workflows/sync-template.yml
@@ -489,51 +489,26 @@ jobs:
             # Write issue to file
             printf "## Label Configuration Changes Detected\n\n" > /tmp/issue.md
             printf "The template has updated labels.json. Manual review required.\n\n" >> /tmp/issue.md
-            printf "### Label Diff\n\n\`\`\`diff\n" >> /tmp/issue.md
-            echo "$LABEL_DIFF" >> /tmp/issue.md
-            printf "\`\`\`\n\n" >> /tmp/issue.md
+            printf '### Label Diff\n\n```diff\n' >> /tmp/issue.md
+            printf "%s\n" "$LABEL_DIFF" >> /tmp/issue.md
+            printf '```\n\n' >> /tmp/issue.md
             printf "### How to Apply\n\n" >> /tmp/issue.md
             printf "1. Review .github/labels.json\n" >> /tmp/issue.md
             printf "2. Go to: https://github.com/${{ github.repository }}/labels\n" >> /tmp/issue.md
             printf "3. Manually apply changes\n\n" >> /tmp/issue.md
             printf "Details: %s to %s\n" "$LAST_SYNC_COMMIT" "$TEMPLATE_COMMIT" >> /tmp/issue.md
 
-            gh issue create \
-              --title "Label Configuration Update Required" \
+            if ! gh issue create \
+              --title "🏷️ Label Configuration Update Required" \
               --label "human-required,template-sync" \
-              --body-file /tmp/issue.md
-          PR_NUMBER="${{ steps.detect-existing.outputs.existing_pr_number }}"
-          TEMPLATE_COMMIT="${{ steps.check-updates.outputs.template_commit }}"
+              --body-file /tmp/issue.md; then
+              echo "⚠️ Warning: Failed to create label configuration issue"
+            fi
 
-          # Decode the base64 PR description
-          FALLBACK_DESCRIPTION_DECODED=$(echo "${{ env.FALLBACK_DESCRIPTION_B64 }}" | base64 -d)
-
-          # Update PR title and description
-          gh pr edit "$PR_NUMBER" \
-            --title "🔄 Sync template updates (Updated $(date +%Y-%m-%d))" \
-            --body "$FALLBACK_DESCRIPTION_DECODED"
-
-          # Check for existing "Template Sync Updated" comments to prevent duplicates
-          EXISTING_COMMENT=$(gh pr view "$PR_NUMBER" --json comments --jq --arg commit "$TEMPLATE_COMMIT" '[.comments[] | select(.body | contains("🔄 **Template Sync Updated**") and contains($commit))] | length')
-
-          if [ "$EXISTING_COMMENT" = "0" ]; then
-            # Add comment to the PR about the update
-            gh pr comment "$PR_NUMBER" --body "🔄 **Template Sync Updated**
-
-            The template repository has new changes since this PR was created. This branch has been updated with the latest template changes.
-
-            **New template commit**: \`$TEMPLATE_COMMIT\`
-            **Updated at**: \`$(date -u +%Y-%m-%dT%H:%M:%SZ)\`
-            **PR description**: Regenerated to include all changes
-
-            Please review the updated changes and merge when ready."
-            echo "✅ Added sync update comment for template commit $TEMPLATE_COMMIT"
+            echo "✅ Created issue for label configuration review"
           else
-            echo "ℹ️ Skipping duplicate comment - sync update for $TEMPLATE_COMMIT already exists"
+            echo "ℹ️ No label configuration changes detected"
           fi
-
-          # Set outputs for consistency
-          echo "pr-url=${{ github.server_url }}/${{ github.repository }}/pull/$PR_NUMBER" >> $GITHUB_OUTPUT
 
           echo "✅ Updated existing PR #$PR_NUMBER with new template changes"
 
