--- a/.github/actions/create-enhanced-pr/action.yml
+++ b/.github/actions/create-enhanced-pr/action.yml
@@ -168,15 +168,21 @@ runs:
       shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
+        PR_LABELS: ${{ inputs.labels }}
       run: |
         echo "Creating PR from branch ${{ inputs.head-branch }} to ${{ inputs.base-branch }}"
+
+        LABEL_ARG=""
+        if [[ -n "$PR_LABELS" ]]; then
+          LABEL_ARG="--label $PR_LABELS"
+        fi
 
         PR_URL=$(gh pr create \
           --base "${{ inputs.base-branch }}" \
           --head "${{ inputs.head-branch }}" \
           --title "${{ inputs.pr-title }}" \
           --body "$PR_DESCRIPTION" \
-          ${{ inputs.labels && format('--label "{0}"', inputs.labels) || '' }})
+          $LABEL_ARG)
 
         echo "PR created: $PR_URL"
 
