chore(dependabot): exclude provider and test paths exclude provider/*-aws/**, provider/*-gcp/**, provider/*-gc/**, provider/*-ibm/** exclude provider/*-jdbc/**, testing/**, *-acceptance-test/**

--- a/.github/fork-resources/dependabot.yml
+++ b/.github/fork-resources/dependabot.yml
@@ -16,6 +16,16 @@ updates:
     labels:
       - "dependencies"
       - "common"
+    exclude-paths:
+      # Exclude non-Azure cloud providers
+      - "provider/*-aws/**"
+      - "provider/*-gcp/**"
+      - "provider/*-gc/**"
+      - "provider/*-ibm/**"
+      - "provider/*-jdbc/**"
+      # Exclude test directories
+      - "testing/**"
+      - "*-acceptance-test/**"
     groups:
       spring:
         patterns:
