ci: update sync template to process dependabot and release config add .release-please-config.json entry to .github/sync-config.json update template to copy dependabot.yml from fork-resources when present

--- a/.github/sync-config.json
+++ b/.github/sync-config.json
@@ -16,6 +16,10 @@
     ],
     "files": [
       {
+        "path": ".release-please-config.json",
+        "description": "Release Please configuration for automated versioning"
+      },
+      {
         "path": ".github/labels.json",
         "description": "Repository label definitions"
       },
