--- a/.github/template-workflows/sync.yml
+++ b/.github/template-workflows/sync.yml
@@ -361,7 +361,7 @@ jobs:
 
           # Create the PR using --body-file to safely handle special characters
           echo "Creating PR from branch $SYNC_BRANCH to fork_upstream"
-          echo "$PR_DESCRIPTION" > /tmp/pr_body.txt
+          printf '%s\n' "$PR_DESCRIPTION" > /tmp/pr_body.txt
           PR_URL=$(gh pr create \
             --base fork_upstream \
             --head "$SYNC_BRANCH" \
@@ -481,7 +481,7 @@ jobs:
 
           # Update PR title and regenerate description with all commits
           # Use --body-file to safely handle special characters in description
-          echo "$PR_DESCRIPTION" > /tmp/pr_body.txt
+          printf '%s\n' "$PR_DESCRIPTION" > /tmp/pr_body.txt
           gh pr edit "$PR_NUMBER" \
             --title "⬆️ Sync with upstream $UPSTREAM_VERSION (Updated)" \
             --body-file /tmp/pr_body.txt
